--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 **/playground
 **/wandb
 **/rollouts
+/verl/utils/vla_utils/openvla_oft/robotwin/models/
+/verl/utils/vla_utils/openvla_oft/robotwin/aloha_maniskill_sim/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
